--- a/PowerLook-Aluguel/PowerLook-Aluguel/Produto.rdlc
+++ b/PowerLook-Aluguel/PowerLook-Aluguel/Produto.rdlc
@@ -332,6 +332,10 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
+                              <Value>R$ </Value>
+                              <Style />
+                            </TextRun>
+                            <TextRun>
                               <Value>=Fields!preco.Value</Value>
                               <Style>
                                 <Format>'R$'0.00;('R$'0.00)</Format>
